Fix animation bug in widget.

The layoutIfNeeded call is generally required as per Apple. It was
working in iOS10 without it but not in iOS11.

Bug: 756849
Change-Id: Iee1d066928abb809f84714fa138dcfa09a4a5059
Reviewed-on: https://chromium-review.googlesource.com/645956
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Elodie Banel <lod@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499161}
Former-commit-id: 5a5293bee4e4e9b7ecc1685fa8877931ac37fed8